Some final fixes

--- a/talks/CJCS2023/index.html
+++ b/talks/CJCS2023/index.html
@@ -24,6 +24,32 @@ title: CJCS 2023
     </p>
 </section>
 <section>
+    <h3>An outsider looking in......</h3>
+    <ul>
+        <li>
+            My training is in numerical analysis;
+        </li>
+        <li class="fragment">
+            This documents my experiences in finding surprising answers to applied problems
+            in lattice polytopes and seeing interesting connections;
+        </li>
+        <li class="fragment">
+            This covers joint works with my collaborators
+            Rob Davis,
+            Evgeniia Korchevskaia,
+            Julia Lindberg,
+            Jakub Mareček,
+            Dhagash Mehta, and
+            Matthew Niemerg.
+        </li>
+        <li class="fragment">
+            Inspirations from the discussions in a AMS Special Sessions
+            that brought together researchers in discrete geometry,
+            numerical analysis, and electric engineering.
+        </li>
+    </ul>
+</section>
+<section>
     <h3>Symmetric edge polytope</h3>
     <div class="definition">
         For a graph $G$, the
@@ -131,7 +157,7 @@ title: CJCS 2023
         <li class="fragment">
             For certain families of graphs,
             $\operatorname{Vol}(P_G)$ are given explicit formulae.
-            (E.g., trees, complete graphs, cycles, wheels graphs, graphs formed by glue cycles along edges)
+            (E.g., trees, complete graphs, cycles, wheels graphs, graphs formed by glue cycles along edges,......)
         </li>
     </ul>
 </section>
