Update AMS SE talk

--- a/talks/AMS-SE-2025/index.html
+++ b/talks/AMS-SE-2025/index.html
@@ -1156,6 +1156,9 @@ title: Balanced networks and positive-dimensional solutions to Kuramoto equation
     </p>
 </section>
 <section>
+    <h3>Conclusion</h3>
+</section>
+<section>
     <br/>
     <div class="center">
         <h1>
