AMS SE Talk update

--- a/talks/AMS-SE-2025/index.html
+++ b/talks/AMS-SE-2025/index.html
@@ -1,13 +1,13 @@
 ---
 layout: mtalk
-title: Balanced networks and positive-dimensional solutions to Kuramoto equations
+title: Balanced networks, Bernshtein-generalness, and positive-dimensional solutions to Kuramoto equations
 ---
 
 <section class="titlepage">
 
     <div class="titlebox">
         <h3 class="title">
-            Balanced networks and positive-dimensional solutions to Kuramoto and power-flow equations
+            Balanced networks, Bernshtein-generalness, and positive-dimensional solutions to Kuramoto and power-flow equations
         </h3>
     </div>
     <br/>
@@ -440,7 +440,7 @@ title: Balanced networks and positive-dimensional solutions to Kuramoto equation
     </div>
     <div class="cols">
         <div class="col center">
-            <img src="C3-with-loops.svg" alt="C3 with loops" width="300">
+            <img src="C3-with-loops.svg" alt="C3 with loops" width="300" class="fragment">
         </div>
         <div class="col">
             <p class="fragment">
@@ -1105,7 +1105,6 @@ title: Balanced networks and positive-dimensional solutions to Kuramoto equation
 <section>
     <h3>Beyond unicycle networks</h3>
     <div class="theorem">
-        <b>Proposition.</b>
         Suppose $G$ consists of $d$ independent even cycles
         $C_1,\ldots,C_d$ that share a single edge $e$,
         then with the choice of the coupling coefficients
@@ -1167,13 +1166,7 @@ title: Balanced networks and positive-dimensional solutions to Kuramoto equation
     </div>
     <br/>
     <p class="center">
-        https://www.tianranchen.org/research/papers/krootcount.pdf
-    </p>
-    <p class="center">
-        https://arxiv.org/abs/2107.12315
-    </p>
-    <p class="center">
-        http://arxiv.org/abs/2108.12875
+        <a href="https://arxiv.org/abs/2210.00784">arXiv:2210.00784</a>
     </p>
     <br/>
     <div class="cols">
